# Heisenberg

./: .gitignore  CMakeLists.txt  compile_bem_maciek  interface.h  main.cpp  model.h  scr
